--- a/app/views/devise/custom/registrations/_menu_edit.html.haml
+++ b/app/views/devise/custom/registrations/_menu_edit.html.haml
@@ -4,6 +4,8 @@
       %a{href: "#general", id: 'general_link'} General
     %dd{"data-magellan-arrival" => "location"}
       %a{href: "#location"} Change Password
+    %dd{"data-magellan-arrival" => "plan"}
+      %a{href: "#plan"} Change plan
     %dd{"data-magellan-arrival" => "gallery"}
       %a{href: "#gallery"} Personalisation
     %dd{"data-magellan-arrival" => "features"}
