--- a/app/views/devise/custom/registrations/edit.html.haml
+++ b/app/views/devise/custom/registrations/edit.html.haml
@@ -5,8 +5,6 @@
   #status
 .row
   .small-12.large-12.columns
-    #general_messages
-      = render "layouts/messages"
     %p
       %a{name: "general"}
     %br/
@@ -14,7 +12,7 @@
 .row
   #screen
     .small-3.large-3.columns
-      #promo_image
+      #avatar
         = render "avatar" 
     .small-9.large-9.columns
       #general
