--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -11,58 +11,66 @@
       %ul.right
         - if user_signed_in?
           %li.divider
-          %li
+          %li{:title => "Notifications"}
             = link_to properties_path do
               %i.fa.fa-flag
           %li.divider
+          %li{:title => "Kudos"}
+            = link_to properties_path do
+              %i.fa.fa-thumbs-o-up
+          %li.divider
           %li.top-nav.has-dropdown{id: "nav1"}
             = link_to properties_path do
-              %i.fa.fa-home
               &nbsp; Properties
             %ul.dropdown
               %li
                 = link_to new_property_path do
-                  %i.fa.fa-plus
                   &nbsp; Add
               %li
                 = link_to new_property_path do
-                  %i.fa.fa-bar-chart-o
                   &nbsp; Stats
           %li.divider
           /Add notification system
           %li.top-nav.has-dropdown{id: "nav2"}
             = link_to new_property_path do
-              %i.fa.fa-dollar
               &nbsp; Bookings
             %ul.dropdown
               %li
                 = link_to new_property_path do
-                  %i.fa.fa-calendar
                   &nbsp; Calendar
+          %li.top-nav{id: "nav8"}
+            = link_to new_property_path do
+              &nbsp; Messages
               
           %li.divider
-          %li.top-nav{id: "nav4"}
+          %li.top-nav{id: "nav3"}
             = link_to edit_user_registration_path do
               %i.fa.fa-search
               &nbsp; Search 
           %li.divider
-          %li.top-nav{id: "nav3"}
+          %li.top-nav{id: "nav4"}
             = link_to edit_user_registration_path do
-              %i.fa.fa-cog
+              &nbsp;
+              = current_user.email
           %li.divider
           %li
             = link_to destroy_user_session_path, :method => :delete do
               %i.fa.fa-sign-out
         - else 
-          %li.top-nav{id: "nav4"}
+          %li.top-nav{id: "nav5"}
+            = link_to "Plans", new_user_registration_path 
+          %li.top-nav{id: "nav6"}
             = link_to "Sign up", new_user_registration_path 
-          %li.top-nav.active{id: "nav5"}
+          %li.top-nav.active{id: "nav7"}
             = link_to 'Login',new_user_session_path 
   .row
-    .large-12.columns
-      - if request.path == '/users/edit'  
+    - if request.path == '/users/edit'  
+      .large-12.columns
         = render 'devise/custom/registrations/menu_edit'
-      - if(params.has_key?(:id))
-        - if request.path == '/properties/'+params[:id]+'/edit'  
+    - if(params.has_key?(:id))
+      - if request.path == '/properties/'+params[:id]+'/edit'
+        .large-12.columns
           = render 'properties/menu_edit'
-        
+    .large-12.columns
+      #messages
+        = render 'layouts/messages'         
