--- a/app/views/property_assets/destroy.js.haml
+++ b/app/views/property_assets/destroy.js.haml
@@ -1,9 +1,8 @@
 $("#create_asset").html("#{escape_javascript(render 'create_asset')}");
-$("#images").html("#{escape_javascript(render 'images')}");
+$("#images").html("#{escape_javascript(render partial: 'property_assets/images' , locals: { assets: @images})}");
 $("#videos").html("#{escape_javascript(render 'videos')}");
 $("#docs").html("#{escape_javascript(render 'docs')}");
-$("#asset_messages").html("#{escape_javascript(render partial: 'layouts/messages')}");
-
+$("#messages").html("#{escape_javascript(render partial: 'layouts/messages')}");
 
 $('#asset_upload').on('change', function () {
 document.getElementById('asset_upload_submit').disabled = false;
