--- a/app/views/devise/custom/registrations/_general.html.haml
+++ b/app/views/devise/custom/registrations/_general.html.haml
@@ -1,15 +1,22 @@
-= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { :multipart => true, method: :put }) do |f|
+= form_for @user, :html => {:data => {:abide => ''}, :id => "general_form"},:url => update_user_registration_path(@user), :method => :post do |f|
+  .row
+    .large-12.columns
+      %h4= 'Update email'
   .row
     .large-12.columns
       = devise_error_messages!
   .row
     .large-6.columns
-      = f.label 'Update email'
-      = f.email_field :email, autofocus: true
+      = f.email_field :email, autofocus: true, id: 'email', placeholder: 'New email', :required => '', type: "email"
+      %small.error Valid email is required
   .row
     .large-6.columns
-      = f.label :current_password
-      = f.password_field :current_password, autocomplete: "off"
+      = f.password_field :current_password, autocomplete: "off", :required => '', placeholder: 'Current password', id: 'password'
+      %small.error Password required
   .row
     .large-6.columns
-      = f.submit "Update", :class => 'button small right'
+      = f.password_field :password_confirmation, autocomplete: "off", :required => '', placeholder: 'And again', 'data-equalto' => 'password'
+      %small.error Password's must match
+  .row
+    .large-6.columns
+      = f.submit "Update", :class => 'button small right', disabled: '', id: 'edit_submit_button'
