--- a/app/views/layouts/_messages.html.haml
+++ b/app/views/layouts/_messages.html.haml
@@ -1,5 +1,6 @@
 - flash.each do |name, msg|
   - if msg.is_a?(String)
-    .alert-box.success.round{"data-alert" => ""}
+    .alert-box.success{"data-alert" => ""}
       = content_tag :div, raw(msg), :id => "flash_#{name}"
       %a.close{href: ""} ×
+      
