--- a/app/views/properties/_menu_edit.html.haml
+++ b/app/views/properties/_menu_edit.html.haml
@@ -5,10 +5,14 @@
     %dd{"data-magellan-arrival" => "location"}
       %a{href: "#location"} Location
     %dd{"data-magellan-arrival" => "assets"}
-      %a{href: "#assets"} Media &amp; Docs
+      %a{href: "#assets", id: 'asset_link'} Media &amp; Docs
     %dd{"data-magellan-arrival" => "features"}
       %a{href: "#features"} Features
     %dd{"data-magellan-arrival" => "descriptions"}
-      %a{href: "#descriptions"} Descriptions  
+      %a{href: "#descriptions"} Descriptions
+    %dd{"data-magellan-arrival" => "prices"}
+      %a{href: "#prices"} Prices &amp; availability
+    %dd{"data-magellan-arrival" => "preview"}
+      %a{href: "#preview"} Preview  
     %br/
     %hr
