--- a/app/views/properties/update_location.js.haml
+++ b/app/views/properties/update_location.js.haml
@@ -1,3 +1,3 @@
 console.log('Location updated');
 //$("#location").html("#{escape_javascript(render partial: 'location')}");
-$("#location_messages").html("#{escape_javascript(render partial: 'layouts/messages')}");
+$("#messages").html("#{escape_javascript(render partial: 'layouts/messages')}");
