--- a/app/views/property_assets/_images.html.haml
+++ b/app/views/property_assets/_images.html.haml
@@ -1,29 +1,27 @@
-- @images.each do |asset|
-  = form_for [@property, asset], remote: true do |f|
-    - if asset.id.present?
-      - div_id = "asset_id_#{asset.id}"
-      %div{id: div_id}
-        .row
-          .large-2.columns
-            %ul.clearing-thumbs{"data-clearing" => ""}
-              %li
-                %a{href: asset.asset.url}
-                  %img{src: asset.asset(:thumb)}
-          .large-10.columns
-            .row
-              .large-12.columns         
-                = f.text_field :description, :placeholder => 'Description', :id => 'test1'
-            .row
-              .large-4.columns
-                %label
-                  = asset.asset_file_name
-              .large-3.columns
-                %p
-                  = f.check_box :private, :id => 'private'
-                  %label{for: "private"} Private
-              .large-2.columns
-                = f.hidden_field :asset_id, :id => "asset_id", :value => asset.id
-                = f.submit 'Update', :class => 'button tiny right round', :disabled => '', :html => { :id => "update_#{div_id}" },  :remote => true
-              .large-2.columns
-                %p.right
-                  = link_to 'Delete', [@property, asset], method: :delete, :class => 'button tiny right round alert', :id => "delete_#{div_id}",  :remote => true
+- assets.each do |a|
+  - if a.id.present?
+    - div_id = "asset_id_#{a.id}"
+    %div{id: div_id}
+    .row
+      .large-2.columns
+        %ul.clearing-thumbs{"data-clearing" => ""}
+          %li
+            %a{href: a.asset.url}
+              %img{src: a.asset(:thumb)}
+      .large-10.columns
+        = form_for [@property, a], remote: true do |f|
+          = f.text_field :description, :placeholder => 'Description', :id => 'test1'
+          .row
+            .large-5.columns
+              %label
+                = a.asset_file_name
+            .large-4.columns
+              %p
+                = f.check_box :private, :id => 'private'
+                %label{for: "private"} Private
+            .large-1.columns
+              = f.hidden_field :asset_id, :id => "asset_id", :value => a.id
+              = f.submit 'Update', :class => 'button tiny right round', :disabled => '', :html => { :id => "update_#{div_id}" },  :remote => true
+            .large-1.columns
+              %p.right
+                = link_to 'Delete', [@property, a], method: :delete, :class => 'button tiny right round alert', :id => "delete_#{div_id}",  :remote => true
