user section with custom controller

--- a/app/views/devise/custom/registrations/_menu_edit.html.haml
+++ b/app/views/devise/custom/registrations/_menu_edit.html.haml
@@ -2,8 +2,8 @@
   %dl.sub-nav
     %dd{"data-magellan-arrival" => "general"}
       %a{href: "#general", id: 'general_link'} General
-    %dd{"data-magellan-arrival" => "location"}
-      %a{href: "#location"} Change Password
+    %dd{"data-magellan-arrival" => "password"}
+      %a{href: "#password"} Change Password
     %dd{"data-magellan-arrival" => "plan"}
       %a{href: "#plan"} Change plan
     %dd{"data-magellan-arrival" => "gallery"}
