--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -17,8 +17,8 @@
     .small-9.large-9.columns
       #general
         = render "general"
-      #general  
-        = render "change_email"
+      #email  
+        = render "email"
 .row
   .small-12.large-12.columns
     %p
@@ -29,4 +29,4 @@
   #screen
     .small-12.large-12.columns
       #avatar
-        = render "change_password" 
+        /= render "change_password" 
