--- a/app/views/devise/custom/registrations/new.html.haml
+++ b/app/views/devise/custom/registrations/new.html.haml
@@ -18,7 +18,8 @@
     %h5.subheader Get started
     = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
       = devise_error_messages!
-      = f.email_field :email, autofocus: true, placeholder: 'Email address'
+      = f.text_field :name, autofocus: true, placeholder: 'Email address'
+      = f.email_field :email, placeholder: 'Email address'
       = f.password_field :password, autocomplete: "off", placeholder: 'Password'
       = f.password_field :password_confirmation, autocomplete: "off", placeholder: 'Password confirmation'
 
