--- a/app/views/devise/registrations/_avatar.html.haml
+++ b/app/views/devise/registrations/_avatar.html.haml
@@ -1,4 +1,4 @@
-= form_for resource, as: resource_name, url: update_avatar_path(resource_name),  html: { method: :post, :id => 'avatar_form' }   do |f|
+= form_for(resource, as: resource_name, url: registration_path(resource_name), html:  {id: 'avatar_form', :data => {:abide => ''}, method: :put }, remote: true) do |f|
   .row
     .large-12.columns
       %ul.clearing-thumbs{"data-clearing" => ""}
@@ -8,4 +8,5 @@
   .row
     .large-12.columns
       %br/
+      = f.hidden_field :secure, :value => true
       = f.file_field :avatar, :id => "avatar_upload", :accept => "image/png,image/gif,image/jpeg"
