general update and refocus

--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -28,5 +28,5 @@
 .row
   #screen
     .small-12.large-12.columns
-      #avatar
-        /= render "change_password" 
+      #password
+        = render "devise/passwords/edit" 
