--- a/app/views/properties/_menu_edit.html.haml
+++ b/app/views/properties/_menu_edit.html.haml
@@ -3,16 +3,18 @@
     %dd{"data-magellan-arrival" => "general"}
       %a{href: "#general", id: 'general_link'} General
     %dd{"data-magellan-arrival" => "location"}
-      %a{href: "#location"} Location
+      %a{href: "#location", id: 'location_link'} Location
     %dd{"data-magellan-arrival" => "assets"}
-      %a{href: "#assets", id: 'asset_link'} Media &amp; Docs
+      %a{href: "#assets", id: 'assets_link'} Media &amp; Docs
     %dd{"data-magellan-arrival" => "features"}
-      %a{href: "#features"} Features
+      %a{href: "#features", id: 'features'} Features
     %dd{"data-magellan-arrival" => "descriptions"}
-      %a{href: "#descriptions"} Descriptions
-    %dd{"data-magellan-arrival" => "prices"}
-      %a{href: "#prices"} Prices &amp; availability
+      %a{href: "#descriptions", id: 'descriptions'} Descriptions
+    %dd{"data-magellan-arrival" => "rates"}
+      %a{href: "#rates", id: 'rates'} Rates &amp; availability
+    %dd{"data-magellan-arrival" => "amenities"}
+      %a{href: "#amenities", id: 'amenities'} Amenities
     %dd{"data-magellan-arrival" => "preview"}
-      %a{href: "#preview"} Preview  
+      %a{href: "#preview", id: 'preview'} Preview  
     %br/
     %hr
