--- a/app/views/property_assets/_assets.html.haml
+++ b/app/views/property_assets/_assets.html.haml
@@ -4,7 +4,7 @@
   %dd
     %a{href: "#panel2-2"} Videos
   %dd
-    %a{href: "#panel2-3"} Documentss
+    %a{href: "#panel2-3"} Documents
 .tabs-content
   #panel2-1.content.active
     #images
