--- a/app/views/properties/_general.html.haml
+++ b/app/views/properties/_general.html.haml
@@ -12,8 +12,8 @@
         %small.error Audience type is required
     .row
       .large-9.columns
-        = f.text_area :description, placeholder: 'Property description', :required => '',:id => 'property_description', :rows => '10'
-        %small.error Description is required
+        = f.text_area :summary, placeholder: 'Property summary', :required => '', :id => 'property_summary', :rows => '10'
+        %small.error Summary required
       .row
         .large-2.columns
           .row
